--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav style="background-color: #3b6f44" class="p-2">
       <div class="container">
         <div class="row">
-          <div class="col-xl-4 col-sm-12 col-md-12">
+          <div class="col-xl-12 col-sm-12 col-md-12 text-end">
             <a class="font" href="#"
               ><i style="color: white" class="bi bi-cart-fill"
                 >&nbsp;<span class="font">Cart &nbsp;|</span></i
@@ -441,8 +441,8 @@
 
     <!-- ..........multiple image slide......... -->
 
-    <div class="row">
-      <div class="col-xl-6 col-md-6 col-sm-12 mt-3">
+    <div style="padding-right: 0px;" class="row">
+      <div style="padding-right: 0px;" class="col-xl-6 col-md-6 col-sm-12 mt-3">
         <div style="border: none" class="card bg-dark text-white">
           <img src="m_apparel_banner.webp" class="card-img" alt="..." />
           <div class="card-img-overlay">
@@ -944,7 +944,7 @@
           ></i>
           <i
             style="color: white; font-size: 25px; padding-left: 30px"
-            class="bi bi-linkedin"
+            class="bi bi-linkedin d-sm-block d-none"
           ></i>
         </div>
         <div class="col-xl-9  p-0"><hr /></div>
